kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: acmdemo
  name: acmdemo
  labels:
    app: acmdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmdemo
  template:
    metadata:
      labels:
        name: acmdemo
    spec:
      containers:
      - image: quay.io/mp_singh/acmdemo
        imagePullPolicy: Always
        name: acmdemo
        ports:
        - containerPort: 3000
