kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: acmdemo
  name: acmdemo
  namespace: acmdemo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    name: acmdemo
  sessionAffinity: None
  type: ClusterIP
