kube/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: acmdemo
  labels:
    app.kubernetes.io/part-of: acmdemo
    name: acmdemo
spec:
  to:
    kind: Service
    name: acmdemo
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
